--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,11 +1,6 @@
-<h1 align="center">Hệ Thống Quản Lý Trường Đại Học & Ngân Hàng</h1>
+<h1 align="center">Quản lý sinh viên & Ngân Hàng</h1>
 
 <table border="1" cellpadding="10" cellspacing="0" width="100%">
-  <tr bgcolor="#e0e0e0">
-    <td align="center">
-      <h3>Menu Điều Hướng</h3>
-    </td>
-  </tr>
   <tr>
     <td align="center">
       <a routerLink="/sinh-vien">
